# py_visualize_accelerometry

./: .gitignore  App start-up on randi.md  App start-up.md  CHANGELOG.md  CITATION.cff  LICENSE  Procfile  README.md  Shared app start-up.md  conda-environment.yml  credentials.json.example  paper.bib  paper.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: auto-version.yml  deploy-demo.yml  docs.yml  publish-pypi.yml  release.yml  test.yml
demo/: Dockerfile  README.md  app.py  app_demo.py  config_overrides.py  generate_data.py
devops/: create_releases.sh
docs/: annotation-guide.md  api.rst  architecture.md  conf.py  data-format.md  getting-started.md  index.rst  legacy-pbs-startup.md  shared-server-startup.md  slurm-deployment.md  tests-overview.md  usage.md
docs/_static/: custom.css  robots.txt
hpc_utils/: bokeh_on_gardner.pbs  connect.sh  dask_on_gardner.sh  dask_scheduler_config.py  small_states_all.pbs  start_app_on_randi.pbs  start_server.sh  stop_server.sh
scripts/: create_releases.sh  generate_demo_data.py
slurm/: connect.sh  start_server.sh  stop_server.sh
tests/: conftest.py  test_data_loading.py  test_plotting.py  test_state.py
visualize_accelerometry/: _temp.py  app.py  callbacks.py  config.py  data_loading.py  main.py  plotting.py  state.py  walking_detection.py
visualize_accelerometry/templates/: index.html  login.html  logout.html
